@@ -8,4 +8,3 @@ SUBDIRS = include clock console mbus timer
 
 include $(top_srcdir)/../../../../automake/subdirs.am
 include $(top_srcdir)/../../../../automake/local.am
-
